# zephyr_adc_template

./: CMakeLists.txt  LoaderStart.bat  README.md  flashonly.jlink  prj.conf  west.yml
boards/: adc_overlay.dtsi  nucleo_h743zi.overlay  stm32f4_disco.overlay  stm32f4_overlay.dtsi  stm32h7_overlay.dtsi  stm32l1_disco.overlay  stm32l1_overlay.dtsi
dts/bindings/: lcd-pins.yaml
inc/: adc_io.h  printf_io.h
src/: main.cpp
